# lib/api-spec/openapi.yaml
@@ -85,6 +85,9 @@ paths:
         - in: query
           name: furnished
           schema: { type: boolean }
+        - in: query
+          name: dssAccepted
+          schema: { type: boolean }
       responses:
         "200":
           description: List of listings
@@ -545,6 +548,7 @@ components:
         furnished: { type: boolean }
         petsAllowed: { type: boolean }
         billsIncluded: { type: boolean }
+        dssAccepted: { type: boolean }
         status: { type: string }
         isFeatured: { type: boolean }
         isPremium: { type: boolean }
@@ -570,6 +574,7 @@ components:
         - furnished
         - petsAllowed
         - billsIncluded
+        - dssAccepted
         - status
         - isFeatured
         - isPremium
@@ -595,6 +600,7 @@ components:
         furnished: { type: boolean }
         petsAllowed: { type: boolean }
         billsIncluded: { type: boolean }
+        dssAccepted: { type: boolean }
         photos: { type: array, items: { type: string } }
         availableFrom: { type: string }
       required:
